<resources>
    <string name="app_name">Rezeptbuch</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_db_debug" translatable="false">Debug DB</string>
    <string name="nav_home">All recipes</string>
    <string name="nav_favorites">Favorite recipes</string>
    <string name="nav_history">History</string>
    <string name="nav_category">Category</string>
    <string name="fragment_recipe_image_description">Preview of the image of the recipe</string>
    <string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="ingredients_title"><u>Ingredients</u></string>
    <string name="description_title"><u>Description</u></string>
    <string name="hint_title">Title</string>
    <string name="desc_add_image">Add an image to the recipe</string>
    <string name="hint_description">Description</string>
    <string name="hint_ingredients">Ingredients</string>
    <string name="action_edit">Edit Recipe</string>
    <string name="spinner_add_category">Create a new category</string>
    <string name="action_create_recipe">Create a new recipe</string>
    <string name="spinner_choose_category">Choose a category…</string>
    <string name="hint_category">Category</string>
    <string name="hint_image">Click to add a recipe image</string>
    <string name="action_save">save</string>
    <string name="create_category_title">Create category</string>
    <string name="create_category_message">Create a new category</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="create_category_dialog_title">Creating a new category</string>
    <string name="error_description_internet">Failed to connect to the server. Check your Connection and try again later.</string>
    <string name="error_description_not_allowed">Failed to connect to the server. You are not allowed to edit or add recipes.</string>
    <string name="error_title_not_allowed">No Permissions</string>
    <string name="error_title_internet">No internet connection</string>
    <string name="create_recipe_dialog_title">Creating a new recipe</string>
    <string name="action_refresh">Refresh</string>
    <string name="permission_needed">A permission is needed</string>
    <string name="permission_read_storage_image">Searching for recipe images requires the app to have access to your files.</string>
    <string name="permission_write_storage_image">Installing the new version requires the app to have write access to your files.</string>
    <string name="error_description_image_upload">"Failed to upload the image. Do you want to try to upload the recipe anyway?\n\nHint: You may add an image afterwards."</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="error_title_image_upload">Failed to upload the image</string>
    <string name="search_hint">Search…</string>
    <string name="downloading_recipes">The recipes are currently being downloaded…</string>
    <string name="notification_updated">Successfully updated recipes at %s.</string>
    <string name="notification_failed_update">"Failed to update the recipes (%s).\nYou are using the app offline."</string>
    <string name="notification_failed_download">Could not download the recipes (%s). Please check
        your internet connection and try again.</string>
    <string name="action_delete">Delete recipe</string>
    <string name="title_delete_recipe">Delete the recipe</string>
    <string name="description_delete_recipe">Are you sure that you want to delete the recipe?</string>
    <string name="delete_recipe_dialog_title">Deleting the recipe</string>
    <string name="error_description_delete_recipe">"Failed to delete the recipe.\nCheck your internet connection and try again later."</string>
    <string name="no_search_results">There are no recipes matching the searched string.</string>
    <string name="update_recipe_dialog_title">Updating the recipe</string>
    <string name="empty_history">"You have not viewed any recipes.\nTherefore, the history is empty."</string>
    <string name="action_fav">Favorite</string>
    <string name="no_favorite">"You have not favored any recipes.\nTo do so, click the heart when viewing a recipe."</string>
    <string name="action_share">Share as link</string>
    <string name="action_share_image">Share as image</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_title_url">Recipe URL</string>
    <string name="pref_default_url" translatable="false">https://rezeptbuch.niklas-schelten.de/</string>

    <string name="pref_title_username">Username</string>
    <string name="pref_default_username" translatable="false">gast</string>

    <string name="pref_title_password">Password</string>
    <string name="pref_default_password" translatable="false">1Gast!Passwort</string>

    <string name="pref_header_general">General Settings</string>
    <string name="error_description_wrong_password">Failed to connect to the server. Check your username and password in the Settings.</string>
    <string name="error_title_wrong_password">Wrong Credentials</string>
    <string name="notification_channel" translatable="false">Update Notifications</string>
    <string name="notification_channel_description" translatable="false">Notifications about updates</string>
    <string name="notification_channel_id" translatable="false">1337</string>
    <string name="update_notification_title">A new update is available</string>
    <string name="update_notification_description">The version %1$s is available.</string>
    <string name="filter_view_recipe" translatable="false">Rezeptbuch</string>
    <string name="share_image">Share the recipe as an image</string>
    <string name="share">Share the recipe link</string>
    <string name="no_recipe">There is no recipe with this id.</string>


</resources>
