<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_fav"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        android:orderInCategory="1"
        android:title="@string/action_fav"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="1"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_share_image"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="1"
        android:title="@string/action_share_image"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        android:orderInCategory="1"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="2"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom"/>
</menu>
